--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "reveal.js",
-  "version": "2.6.2",
-  "description": "The HTML Presentation Framework",
-  "homepage": "http://lab.hakim.se/reveal-js",
-  "subdomain": "revealjs",
+  "name": "reveal.js.enhanced",
+  "version": 0.1.0",
+  "description": "The enhanced HTML Presentation Framework",
+  "homepage": "https://github.com/AGresvig/reveal.js.enhanced",
   "scripts": {
     "test": "grunt test",
     "start": ""
   },
   "author": {
-    "name": "Hakim El Hattab",
-    "email": "hakim.elhattab@gmail.com",
-    "web": "http://hakim.se"
+    "name": "Hakim El Hattab & Aksel Gresvig",
+    "email": "aksel@agresvig.com",
+    "web": "http://blog.akselgresvig.com"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "git://github.com/AGresvig/reveal.js.enhanced.git"
   },
   "engines": {
     "node": "~0.8.0"
@@ -41,7 +40,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/hakimel/reveal.js/blob/master/LICENSE"
+      "url": "https://github.com/AGresvig/reveal.js.enhanced/blob/master/LICENSE"
     }
   ]
 }
