--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reveal.js.enhanced",
-  "version": 0.1.0",
+  "version": "0.1.0",
   "description": "The enhanced HTML Presentation Framework",
   "homepage": "https://github.com/AGresvig/reveal.js.enhanced",
   "scripts": {
@@ -35,6 +35,7 @@
     "grunt-contrib-sass": "~0.5.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-gh-pages": "^0.9.1",
     "grunt-zip": "~0.7.0"
   },
   "licenses": [
